testsuite/tests/polykinds/T9222.stderr

T9222.hs:13:3: error:
    Couldn't match type ‘b0’ with ‘b’
      ‘b0’ is untouchable
        inside the constraints: a ~ '(b0, c0)
        bound by the type of the constructor ‘Want’:
                   (a ~ '(b0, c0)) => Proxy b0
        at T9222.hs:13:3
    ‘b’ is a rigid type variable bound by
    the type of the constructor ‘Want’:
      forall (k :: BOX) (k1 :: BOX) (a :: (,) k k1) (b :: k) (c :: k1).
      ((a ~ '(b, c)) => Proxy b) -> Want a
    at T9222.hs:13:3
    Expected type: '(b, c)
      Actual type: a
    In the ambiguity check for ‘Want’
    To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
    In the definition of data constructor ‘Want’
    In the data type declaration for ‘Want’
